--- a/unfoldApp/src/pages/page1/page1.scss
+++ b/unfoldApp/src/pages/page1/page1.scss
@@ -7,3 +7,19 @@ page-page1 {
 	font-size: 8pt;
 	color: #ccc;
 }
+
+.action-sheets-basic-page {
+  .ion-md-share {
+    color: #ED4248;
+  }
+  .ion-md-arrow-dropright-circle {
+    color: #508AE4;
+  }
+  .ion-md-heart-outline {
+    color: #31D55F;
+  }
+  .action-sheet-cancel ion-icon,
+  .action-sheet-destructive ion-icon {
+    color: #757575;
+  }
+}
